refactored audio-device config in tracker mode

--- a/app/templates/radiotracking.html
+++ b/app/templates/radiotracking.html
@@ -77,7 +77,7 @@
                         
                         <!-- Device Configuration -->
                         <div class="mb-3">
-                            <!-- Normal Mode: Device Count -->
+                            <!-- Tracker Mode: Device Count -->
                             <div x-show="!expertMode">
                                 <div class="row align-items-center">
                                     <div class="col-md-6">
