added Dockerfile and Github Action for building

--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -12,10 +12,7 @@
             <div class="col-sm py-2">
                 <template x-if="configGroups.length > 1">
                     <div class="d-flex align-items-center justify-content-center">
-                        <label class="text-muted me-2 mb-0 small">
-                            <i class="fas fa-folder me-1"></i>
-                            Config Group:
-                        </label>
+                        <i class="fas fa-folder text-muted me-2"></i>
                         <select class="form-select form-select-sm border-secondary" 
                                 style="width: auto; min-width: 180px; max-width: 250px;"
                                 :value="currentConfigGroup"
