--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/" x-text="hostname">Loading...</a>
+        <a class="navbar-brand" :href="window.BASE_URL || '/'" x-text="hostname">Loading...</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,7 +40,7 @@
                 </li>
                 <li class="nav-item" x-show="!serverMode">
                     <a class="nav-link" 
-                       href="/data/files" 
+                       :href="(window.BASE_URL || '') + '/data/files'" 
                        target="_blank" 
                        title="File Browser (External)">
                         <i class="fas fa-folder-open me-1"></i>Data
