Allos ssh-key configuration

--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -19,7 +19,7 @@
                        href="#schedule" 
                        @click.prevent="activeConfig = 'schedule'"
                        :class="{ 'active': activeConfig === 'schedule', 'fw-bold': activeConfig === 'schedule' }">
-                        <i class="fas fa-calendar-alt me-1"></i>Schedule
+                        <i class="fas fa-cog me-1"></i>System Settings
                     </a>
                 </li>
                 <li class="nav-item" x-show="isServiceAvailable('radiotracking')">
