--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -61,7 +61,7 @@
     min-height: 300px;
     height: 100%;
     width: 100%;
-    border-radius: 0.25rem;
+    border-radius: 0 0 0.25rem 0.25rem;
     border: 1px solid #dee2e6;
 }
 
